--- a/index.html
+++ b/index.html
@@ -4,11 +4,119 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
     <title>Pehnawa</title>
+
+    <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
+    <link
+      rel="stylesheet"
+      href="https://purplebrick.netlify.app/public/main.css"
+    />
+
+    <!-- ===================FOR USING THE ICONS, LINK BOX ICON LIBRARY LINK=============== -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+
   </head>
   <body>
-    <h1>Pehnawa</h1>
+    <!-- ======================Navigation Bar================ -->
+    <header class="navbar">
+      <nav class="nav-container-inline">
+          <div class="nav-logo-container">
+              <a href="#" class="nav-logo">Pehnawa</a>
+            </div>
+            <div class="nav-search-container">
+                <label for="nav-search-bar" class="nav-search-label">
+                  <input type="text" id="nav-search-bar" class="nav-search-bar" placeholder="Search..." />           
+              <i class="bx bx-search-alt-2 nav-search-icon"></i>
+                </label>
+            </div>
+            <div class="nav-items">
+                <a href="#">
+                    <p>Products</p>
+                </a>
+                <a href="#">
+                    <i class="bx bx-bookmark-heart"></i>
+                </a>
+          <a href="#">
+                    <i class="bx bx-cart"></i>
+                </a>
+          <a href="#">
+                    <i class="bx bxs-user-circle "avatar avatar-circular"></i>
+                </a>
+            </div>
+      </nav>
+    </header>
+    <!-- ======================Hero Banner================ -->
+    <section class="hero-banner outer-container">
+    <div class="hero-banner-inner-container container flex-row-nowrap"> 
+      <div class="banner-left-section flex-column-nowrap">
+        <p class="para-5">Experience shopping the right way</p>
+        <h1 class="heading-3">Winter Sale</h1>
+        <h1 class="heading-1">50% OFF</h1>
+        <button class="btn btn-standard-primary">SHOP NOW</button>
+      </div>
+      <div class="banner-right-section">
+        <img src="./public/images/hero-image.png" class="hero-image">
+      </div>
+    </div>
+    </section>
+    <section class="gender-cards-container outer-container">
+      <div class="gender-card card-women">
+        <h2 class="heading-2">Women <br> Section</h2>
+      </div>
+      <div class="gender-card card-new-arrival">
+        <h2 class="heading-2">New <br> Arrival</h2>
+      </div>
+      <div class="gender-card card-men">
+        <h2 class="heading-2">Men <br> Section</h2>
+      </div>
+    </section>
+    <section class="category-container outer-container">
+      <h2 class="heading-2 section-heading">Popular Categories</h2>
+      <div class="category-card-container container">
+        <div class="card card-shirt">
+            <p>Shirts</p>
+        </div>
+        <div class="card card-tshirt">
+          <p>T-Shirts</p>
+      </div>
+      <div class="card card-jean">
+        <p>Jeans</p>
+    </div>
+    <div class="card card-wallet">
+      <p>Wallets</p>
+  </div>
+  <div class="card card-shoe">
+    <p>Shoes</p>
+</div>
+      </div>
+    </section>
+    <section class="offer-section outer-container">
+      <h2 class="heading-2 section-heading">Deal of the Day</h2>
+      <div class="offer-card-container container">
+        <div class="offer-card flex-column-nowrap">
+          <h1 class="heading-h3">50% OFF</h1>
+          <p class="para-3">Grab the best deal of all times</p>
+        </div>
+        <div class="offer-card flex-column-nowrap">
+          <h1 class="heading-h3">50% OFF</h1>
+          <p class="para-3">Grab the best deal of all times</p>
+        </div>
+
+      </div>
+
+    </section>
+    <footer>
+      <h1>This is footer</h1>
+    </footer>
+
+
+   
+    <!-- ======================LINKING THE JS FILE================ -->
+    <script src="https://purplebrick.netlify.app/public/main.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
