feat: added homepage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pehnawa</title>
+    <title>Pehnawa | Home</title>
 
     <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
     <link
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- ======================Navigation Bar================ -->
-    <header class="navbar">
+    <header class="navbar" id="navbar">
       <nav class="nav-container-inline">
           <div class="nav-logo-container">
               <a href="#" class="nav-logo">Pehnawa</a>
@@ -98,19 +98,54 @@
       <h2 class="heading-2 section-heading">Deal of the Day</h2>
       <div class="offer-card-container container">
         <div class="offer-card flex-column-nowrap">
-          <h1 class="heading-h3">50% OFF</h1>
+          <h1 class="heading-h3">50% OFF*</h1>
           <p class="para-3">Grab the best deal of all times</p>
+          <span class="coupon-code">USE CODE: 50-OFF</span>
         </div>
         <div class="offer-card flex-column-nowrap">
-          <h1 class="heading-h3">50% OFF</h1>
-          <p class="para-3">Grab the best deal of all times</p>
+          <h1 class="heading-h3">FREE DELIVERY</h1>
+          <p class="para-3">On purchase of above Rs. 2000</p>
+          <span class="coupon-code">USE CODE: FREEDEL</span>
         </div>
-
+      </div>
+    </section>
+    <footer class="footer-section outer-container">
+      <div class="footer-container container flex-row-wrap">
+        <div >
+          <a href="#" class="brand nav-logo">Pehnawa</a>
+          <p class="para-4 footer-heading">Get In Touch</p>
+          <ul class="social-column ">
+          <li><a href="#" target="_blank">Facebook</a></li>
+          <li><a href="#" target="_blank">Instagram</a></li>
+          <li><a href="#" target="_blank">Twitter</a></li>
+        </ul>
+        </div>
+        <div>
+          <p class="para-4 footer-heading">Categories</p>
+          <ul class="category-column">
+          <li><a href="#" target="_blank">Shirts</a></li>
+          <li><a href="#" target="_blank">T-Shirts</a></li>
+          <li><a href="#" target="_blank">Jeans</a></li>
+          <li><a href="#" target="_blank">Wallets</a></li>
+          <li><a href="#" target="_blank">Shoes</a></li>
+        </ul>
+        </div>
+        <div class="useful-links">
+          <p class="para-4 footer-heading">Contact us</p>
+          <ul class="contact-column">
+          <li><a href="#" target="_blank">Ph.no.: 987-654-3210</a></li>
+          <li><a href="#" target="_blank">Email: pehnawa@gmail.com</a></li>
+          <li><a href="#" target="_blank">Address: 34/H, Sector 32, <br> Noida, Uttar Pradesh </a></li>
+        </ul>
+        </div>
+        <div class="scroll-to-top">
+          <a href="#navbar">
+            <i class='bx bx-arrow-to-top bx-flashing scroll-to-top'></i>
+            <p class="para-4">Scroll to Top</p>
+          </a>
+        </div>
       </div>
 
-    </section>
-    <footer>
-      <h1>This is footer</h1>
     </footer>
 
 
