--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="navbar" id="navbar">
       <nav class="nav-container-inline">
           <div class="nav-logo-container">
-              <a href="#" class="nav-logo">Pehnawa</a>
+              <a href="./index.html" class="nav-logo">Pehnawa</a>
             </div>
             <div class="nav-search-container">
                 <label for="nav-search-bar" class="nav-search-label">
@@ -34,16 +34,16 @@
                 </label>
             </div>
             <div class="nav-items">
-                <a href="#">
+                <a href="./public/pages/product.html">
                     <p>Products</p>
                 </a>
-                <a href="#">
+                <a href="./public/pages/wishlist.html">
                     <i class="bx bx-bookmark-heart"></i>
                 </a>
-          <a href="#">
+          <a href="./public/pages/cart.html">
                     <i class="bx bx-cart"></i>
                 </a>
-          <a href="#">
+          <a href="./public/pages/profile.html">
                     <i class="bx bxs-user-circle "avatar avatar-circular"></i>
                 </a>
             </div>
