feat: added cart management page

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
                 </label>
             </div>
             <div class="nav-items">
-                <a href="./public/pages/product.html">
+                <a href="./public/pages/product/product.html">
                     <p>Products</p>
                 </a>
-                <a href="./public/pages/wishlist.html">
+                <a href="./public/pages/wishlist/wishlist.html">
                     <i class="bx bx-bookmark-heart"></i>
                 </a>
-          <a href="./public/pages/cart.html">
+          <a href="./public/pages/cart/cart.html">
                     <i class="bx bx-cart"></i>
                 </a>
-          <a href="./public/pages/profile.html">
+          <a href="./public/pages/profile/profile.html">
                     <i class="bx bxs-user-circle "avatar avatar-circular"></i>
                 </a>
             </div>
