--- a/public/pages/product/product.html
+++ b/public/pages/product/product.html
@@ -25,7 +25,7 @@
     <header class="navbar" id="navbar">
       <nav class="nav-container-inline">
           <div class="nav-logo-container">
-              <a href="../../index.html" class="nav-logo">Pehnawa</a>
+              <a href="../../../index.html" class="nav-logo">Pehnawa</a>
             </div>
             <div class="nav-search-container">
                 <label for="nav-search-bar" class="nav-search-label">
@@ -34,24 +34,24 @@
                 </label>
             </div>
             <div class="nav-items">
-                <a href="../pages/product.html">
+                <a href="../product/product.html">
                     <p>Products</p>
                 </a>
-                <a href="../pages/wishlist.html">
+                <a href="../wishlist/wishlist.html">
                     <i class="bx bx-bookmark-heart"></i>
                 </a>
-          <a href="../pages/cart.html">
+          <a href="../cart/cart.html">
                     <i class="bx bx-cart"></i>
                 </a>
-          <a href="../pages/profile.html">
+          <a href="../profile/profile.html">
                     <i class="bx bxs-user-circle "avatar avatar-circular"></i>
                 </a>
             </div>
       </nav>
     </header>
 
-    <!-- --------------left sidebar---------------->
     <section class="product-container outer-container">
+        <!-- --------------left sidebar---------------->
         <aside class="filter-sidebar flex-column-nowrap">
             <div class="filters-wrapper flex-row-nowrap">
                 <h3 class="heading-4">Filters</h3>
@@ -129,7 +129,7 @@
             <div class="product-card pehnawa-card flex-column-nowrap">
               <i class="bx bx-heart-circle btn-wishlist"></i>
               <div class="card-img-wrapper">
-                  <img src="../images/product-image.webp" alt="product card" class="card-img" />
+                  <img src="../../images/product-image.webp" alt="product card" class="card-img" />
               </div>
               <div class="card-details-wrapper">
               <div class="card-name-wrapper">
@@ -151,7 +151,7 @@
             <div class="product-card pehnawa-card flex-column-nowrap">
               <i class="bx bx-heart-circle btn-wishlist"></i>
               <div class="card-img-wrapper">
-                  <img src="../images/shirt-2.webp" alt="product card" class="card-img" />
+                  <img src="../../images/shirt-2.webp" alt="product card" class="card-img" />
               </div>
               <div class="card-details-wrapper">
               <div class="card-name-wrapper">
@@ -173,7 +173,7 @@
             <div class="product-card pehnawa-card flex-column-nowrap">
               <i class="bx bx-heart-circle btn-wishlist"></i>
               <div class="card-img-wrapper">
-                  <img src="../images/shirt-3.webp" alt="product card" class="card-img" />
+                  <img src="../../images/shirt-3.webp" alt="product card" class="card-img" />
               </div>
               <div class="card-details-wrapper">
               <div class="card-name-wrapper">
@@ -196,7 +196,7 @@
             <div class="product-card pehnawa-card flex-column-nowrap">
               <i class="bx bx-heart-circle btn-wishlist"></i>
               <div class="card-img-wrapper">
-                  <img src="../images/tshirt1.webp" alt="product card" class="card-img" />
+                  <img src="../../images/tshirt1.webp" alt="product card" class="card-img" />
               </div>
               <div class="card-details-wrapper">
               <div class="card-name-wrapper">
@@ -219,7 +219,7 @@
             <div class="product-card pehnawa-card flex-column-nowrap">
               <i class="bx bx-heart-circle btn-wishlist"></i>
               <div class="card-img-wrapper">
-                  <img src="../images/tshirt2.webp" alt="product card" class="card-img" />
+                  <img src="../../images/tshirt2.webp" alt="product card" class="card-img" />
               </div>
               <div class="card-details-wrapper">
               <div class="card-name-wrapper">
@@ -242,7 +242,7 @@
             <div class="product-card pehnawa-card flex-column-nowrap">
               <i class="bx bx-heart-circle btn-wishlist"></i>
               <div class="card-img-wrapper">
-                  <img src="../images/tshirt3.webp" alt="product card" class="card-img" />
+                  <img src="../../images/tshirt3.webp" alt="product card" class="card-img" />
               </div>
               <div class="card-details-wrapper">
               <div class="card-name-wrapper">
@@ -265,7 +265,7 @@
             <div class="product-card pehnawa-card flex-column-nowrap">
               <i class="bx bx-heart-circle btn-wishlist"></i>
               <div class="card-img-wrapper">
-                  <img src="../images/tshirt4.webp" alt="product card" class="card-img" />
+                  <img src="../../images/tshirt4.webp" alt="product card" class="card-img" />
               </div>
               <div class="card-details-wrapper">
               <div class="card-name-wrapper">
@@ -287,7 +287,7 @@
           </div>
           
 
-</main>
+        </main>
     </section>
     
 
