feat: added login page

--- a/public/pages/cart/cart.html
+++ b/public/pages/cart/cart.html
@@ -44,7 +44,10 @@
                     <i class="bx bx-cart"></i>
                 </a>
                 <a href="../profile/profile.html">
-                    <i class="bx bxs-user-circle "avatar avatar-circular"></i>
+                    <i class="bx bxs-user-circle "></i>
+                </a>
+                <a href="../login/login.html">
+                  <p>Login</p>
                 </a>
             </div>
       </nav>
