--- a/public/pages/login/login.html
+++ b/public/pages/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pehnawa | Home</title>
+    <title>Pehnawa | Shopping Cart</title>
 
     <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
     <link
@@ -17,14 +17,14 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./login.css" />
   </head>
   <body>
     <!-- ======================Navigation Bar================ -->
     <header class="navbar" id="navbar">
       <nav class="nav-container-inline">
         <div class="nav-logo-container">
-          <a href="./index.html" class="nav-logo">Pehnawa</a>
+          <a href="../../../index.html" class="nav-logo">Pehnawa</a>
         </div>
         <div class="nav-search-container">
           <label for="nav-search-bar" class="nav-search-label">
@@ -38,93 +38,47 @@
           </label>
         </div>
         <div class="nav-items">
-          <a href="./public/pages/product/product.html">
+          <a href="../product/product.html">
             <p>Products</p>
           </a>
-          <a href="./public/pages/wishlist/wishlist.html">
+          <a href="../wishlist/wishlist.html">
             <i class="bx bx-bookmark-heart"></i>
           </a>
-          <a href="./public/pages/cart/cart.html">
+          <a href="../cart/cart.html">
             <i class="bx bx-cart"></i>
           </a>
-          <a href="./public/pages/profile/profile.html" class="profile-icon">
+          <a href="../profile/profile.html">
             <i class="bx bxs-user-circle"></i>
           </a>
-          <a href="./public/pages/login/login.html">
+          <a href="../login/login.html">
             <p>Login</p>
           </a>
         </div>
       </nav>
     </header>
-    <!-- ======================Hero Banner================ -->
-    <section class="hero-banner outer-container">
-      <div class="hero-banner-inner-container container flex-row-nowrap">
-        <div class="banner-left-section flex-column-nowrap">
-          <p class="para-5">Experience shopping the right way</p>
-          <h1 class="heading-3">Winter Sale</h1>
-          <h1 class="heading-1">50% OFF</h1>
-          <button class="btn btn-standard-primary">SHOP NOW</button>
-        </div>
-        <div class="banner-right-section">
-          <img src="./public/images/hero-image.png" class="hero-image" />
-        </div>
+
+    <section class="login-card-container outer-container">
+      <div class="login-card flex-column-nowrap">
+        <h3 class="heading-3">Login</h3>
+        <form class="login-form flex-column-nowrap">
+          <div class="flex-column-nowrap input-wrapper">
+            <label for="login-email">Email address</label>
+            <input type="email" id="login-email" required />
+          </div>
+          <div class="flex-column-nowrap input-wrapper">
+            <label for="login-password">Password</label>
+            <input type="password" id="login-password" required />
+          </div>
+          <div class="flex-row-nowrap remember-wrapper">
+            <label> <input type="checkbox" /> Remember Me </label>
+            <a href="#">Forgot Your Password</a>
+          </div>
+          <button type="submit" class="btn btn-login">Login</button>
+        </form>
+        <a href="#">Create New Account ></a>
       </div>
     </section>
-    <section class="gender-cards-container outer-container">
-      <div class="gender-card card-women">
-        <h2 class="heading-2">
-          Women <br />
-          Section
-        </h2>
-      </div>
-      <div class="gender-card card-new-arrival">
-        <h2 class="heading-2">
-          New <br />
-          Arrival
-        </h2>
-      </div>
-      <div class="gender-card card-men">
-        <h2 class="heading-2">
-          Men <br />
-          Section
-        </h2>
-      </div>
-    </section>
-    <section class="category-container outer-container">
-      <h2 class="heading-2 section-heading">Popular Categories</h2>
-      <div class="category-card-container container">
-        <div class="card card-shirt">
-          <p>Shirts</p>
-        </div>
-        <div class="card card-tshirt">
-          <p>T-Shirts</p>
-        </div>
-        <div class="card card-jean">
-          <p>Jeans</p>
-        </div>
-        <div class="card card-wallet">
-          <p>Wallets</p>
-        </div>
-        <div class="card card-shoe">
-          <p>Shoes</p>
-        </div>
-      </div>
-    </section>
-    <section class="offer-section outer-container">
-      <h2 class="heading-2 section-heading">Deal of the Day</h2>
-      <div class="offer-card-container container">
-        <div class="offer-card flex-column-nowrap">
-          <h1 class="heading-h3">50% OFF*</h1>
-          <p class="para-3">Grab the best deal of all times</p>
-          <span class="coupon-code">USE CODE: 50-OFF</span>
-        </div>
-        <div class="offer-card flex-column-nowrap">
-          <h1 class="heading-h3">FREE DELIVERY</h1>
-          <p class="para-3">On purchase of above Rs. 2000</p>
-          <span class="coupon-code">USE CODE: FREEDEL</span>
-        </div>
-      </div>
-    </section>
+
     <footer class="footer-section outer-container">
       <div class="footer-container container flex-row-wrap">
         <div>
