refactor: changed navigation in wishlist page

--- a/public/pages/wishlist/wishlist.html
+++ b/public/pages/wishlist/wishlist.html
@@ -46,6 +46,9 @@
                 <a href="../profile/profile.html">
                     <i class="bx bxs-user-circle "avatar avatar-circular"></i>
                 </a>
+                <a href="../login/login.html">
+                  <p>Login</p>
+                </a>
             </div>
       </nav>
     </header>
