--- a/public/pages/reset-password/reset-password.html
+++ b/public/pages/reset-password/reset-password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pehnawa | Login</title>
+    <title>Pehnawa | Reset Password</title>
 
     <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
     <link
@@ -17,7 +17,7 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="../login/login.css" />
   </head>
   <body>
     <!-- ======================Navigation Bar================ -->
@@ -59,25 +59,20 @@
 
     <section class="login-card-container outer-container">
       <div class="login-card flex-column-nowrap">
-        <h3 class="heading-3">Login</h3>
+        <h3 class="heading-3">Reset Password</h3>
         <form class="login-form flex-column-nowrap">
           <div class="flex-column-nowrap input-wrapper">
             <label for="login-email">Email address</label>
             <input type="email" id="login-email" required />
           </div>
-          <div class="flex-column-nowrap input-wrapper">
-            <label for="login-password">Password</label>
-            <input type="password" id="login-password" required />
-          </div>
           <div class="flex-row-nowrap remember-wrapper">
-            <label> <input type="checkbox" /> Remember Me </label>
-            <a href="../reset-password/reset-password.html"
-              >Forgot Your Password</a
-            >
+            <p class="para-4">
+              You will receive a password reset link on this email, Please check
+              your inbox.
+            </p>
           </div>
-          <button type="submit" class="btn btn-login">Login</button>
+          <button type="submit" class="btn btn-login">Send Reset Link</button>
         </form>
-        <a href="../signup/signup.html">Create New Account ></a>
       </div>
     </section>
 
