refactor: added few more input fields

--- a/public/pages/signup/signup.html
+++ b/public/pages/signup/signup.html
@@ -66,8 +66,20 @@
             <input type="email" id="login-email" required />
           </div>
           <div class="flex-column-nowrap input-wrapper">
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" required />
+          </div>
+          <div class="flex-column-nowrap input-wrapper">
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" required />
+          </div>
+          <div class="flex-column-nowrap input-wrapper">
             <label for="login-password">Password</label>
             <input type="password" id="login-password" required />
+          </div>
+          <div class="flex-column-nowrap input-wrapper">
+            <label for="confirm-password">Confirm Password</label>
+            <input type="password" id="confirm-password" required />
           </div>
           <div class="flex-row-nowrap remember-wrapper">
             <label>
