feat: added logout page, refactored some wiring

--- a/public/pages/wishlist/wishlist.html
+++ b/public/pages/wishlist/wishlist.html
@@ -46,8 +46,8 @@
                 <a href="../profile/profile.html">
                     <i class="bx bxs-user-circle "avatar avatar-circular"></i>
                 </a>
-                <a href="../login/login.html">
-                  <p>Login</p>
+                <a href="../logout/logout.html">
+                  <p>Logout</p>
                 </a>
             </div>
       </nav>
