--- a/public/pages/logout/logout.html
+++ b/public/pages/logout/logout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pehnawa | Login</title>
+    <title>Pehnawa | Logout</title>
 
     <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
     <link
@@ -17,7 +17,8 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./login.css" />
+    <link rel="stylesheet" href="../login/login.css" />
+    <link rel="stylesheet" href="./logout.css" />
   </head>
   <body>
     <!-- ======================Navigation Bar================ -->
@@ -50,34 +51,20 @@
           <a href="../profile/profile.html">
             <i class="bx bxs-user-circle"></i>
           </a>
-          <a href="../signup/signup.html">
-            <p>Signup</p>
+          <a href="../login/login.html">
+            <p>Login</p>
           </a>
         </div>
       </nav>
     </header>
 
     <section class="login-card-container outer-container">
-      <div class="login-card flex-column-nowrap">
-        <h3 class="heading-3">Login</h3>
-        <form class="login-form flex-column-nowrap">
-          <div class="flex-column-nowrap input-wrapper">
-            <label for="login-email">Email address</label>
-            <input type="email" id="login-email" required />
-          </div>
-          <div class="flex-column-nowrap input-wrapper">
-            <label for="login-password">Password</label>
-            <input type="password" id="login-password" required />
-          </div>
-          <div class="flex-row-nowrap remember-wrapper">
-            <label> <input type="checkbox" /> Remember Me </label>
-            <a href="../reset-password/reset-password.html"
-              >Forgot Your Password</a
-            >
-          </div>
-          <button type="submit" class="btn btn-login">Login</button>
-        </form>
-        <a href="../signup/signup.html">Create New Account ></a>
+      <div class="login-card flex-column-nowrap logout-card">
+        <i class="bx bx-check-circle"></i>
+        <h3 class="heading-3">You have successfully Logged Out</h3>
+        <a href="../../../index.html" class="btn-link btn-link-primary"
+          >< Back to Home</a
+        >
       </div>
     </section>
 
