feat: made homepage responsive

--- a/index.html
+++ b/index.html
@@ -27,28 +27,57 @@
           <div class="nav-logo-container">
               <a href="./index.html" class="nav-logo">Pehnawa</a>
             </div>
-            <div class="nav-search-container">
+            <div class="nav-search-container nav-search-main">
                 <label for="nav-search-bar" class="nav-search-label">
                   <input type="text" id="nav-search-bar" class="nav-search-bar" placeholder="Search..." />           
               <i class="bx bx-search-alt-2 nav-search-icon"></i>
                 </label>
             </div>
             <div class="nav-items">
-                <a href="./public/pages/product/product.html">
-                    <p>Products</p>
-                </a>
-                <a href="./public/pages/wishlist/wishlist.html">
-                    <i class="bx bx-bookmark-heart"></i>
-                </a>
-          <a href="./public/pages/cart/cart.html">
-                    <i class="bx bx-cart"></i>
-                </a>
-          <a href="./public/pages/profile/profile.html">
-                    <i class="bx bxs-user-circle "avatar avatar-circular"></i>
-                </a>
+              <a href="./public/pages/product/product.html">
+                <p>Products</p>
+              </a>
+              <a href="./public/pages/wishlist/wishlist.html">
+                <i class="bx bx-bookmark-heart"></i>
+              </a>
+              <a href="./public/pages/cart/cart.html">
+                <i class="bx bx-cart"></i>
+              </a>
+              <a href="./public/pages/profile/profile.html">
+                <i class="bx bxs-user-circle "avatar avatar-circular"></i>
+              </a>
+            </div>
+            <div class="hamburger-container">
+              <i class="bx bx-grid-alt hamburger-icon"></i>
             </div>
       </nav>
     </header>
+    <div class="vertical-nav flex-column-nowrap">
+
+      <i class='bx bx-x-circle close-vertical-btn'></i>
+
+      <div class="nav-search-container">
+        <label for="nav-search-bar" class="nav-search-label">
+          <input type="text" id="nav-search-bar" class="nav-search-bar" placeholder="Search" />           
+          <i class="bx bx-search-alt-2 nav-search-icon"></i>
+        </label>
+    </div>
+      <a href="./public/pages/product/product.html">
+        Products <i class='bx bxs-t-shirt' ></i> 
+      </a>
+      <a href="./public/pages/wishlist/wishlist.html">
+        Wishlist <i class="bx bxs-bookmark-heart"></i> 
+      </a>
+      <a href="./public/pages/cart/cart.html">
+        Cart <i class="bx bxs-cart"></i> 
+      </a>
+      <a href="./public/pages/profile/profile.html">
+        Profile <i class="bx bxs-user-circle "avatar avatar-circular"></i> 
+      </a>
+      <a href="./public/pages/cart/cart.html">
+        Login <i class='bx bxs-log-in' ></i> 
+      </a>
+    </div>
     <!-- ======================Hero Banner================ -->
     <section class="hero-banner outer-container">
     <div class="hero-banner-inner-container container flex-row-nowrap"> 
@@ -64,15 +93,21 @@
     </div>
     </section>
     <section class="gender-cards-container outer-container">
-      <div class="gender-card card-women">
-        <h2 class="heading-2">Women <br> Section</h2>
-      </div>
-      <div class="gender-card card-new-arrival">
-        <h2 class="heading-2">New <br> Arrival</h2>
-      </div>
-      <div class="gender-card card-men">
-        <h2 class="heading-2">Men <br> Section</h2>
-      </div>
+      <a href="./public/pages/product/product.html">
+        <div class="gender-card card-women">
+          <h2 class="heading-2">Women <br> Section</h2>
+        </div>
+      </a>
+      <a href="./public/pages/product/product.html">  
+        <div class="gender-card card-new-arrival">
+          <h2 class="heading-2">New <br> Arrival</h2>
+        </div>
+      </a>
+      <a href="./public/pages/product/product.html">  
+        <div class="gender-card card-men">
+          <h2 class="heading-2">Men <br> Section</h2>
+        </div>
+      </a>  
     </section>
     <section class="category-container outer-container">
       <h2 class="heading-2 section-heading">Popular Categories</h2>
