style: made full site reponsive

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
               <i class="bx bx-search-alt-2 nav-search-icon"></i>
                 </label>
             </div>
+            <div class="hamburger-container">
+              <i class="bx bx-grid-alt hamburger-icon"></i>
+            </div>
             <div class="nav-items">
               <a href="./public/pages/product/product.html">
                 <p>Products</p>
@@ -45,22 +48,20 @@
               <a href="./public/pages/profile/profile.html">
                 <i class="bx bxs-user-circle "avatar avatar-circular"></i>
               </a>
-            </div>
-            <div class="hamburger-container">
-              <i class="bx bx-grid-alt hamburger-icon"></i>
-            </div>
+              <a href="./public/pages/login/login.html">
+                <p>Login</p>
+              </a>
+            </div> 
       </nav>
     </header>
     <div class="vertical-nav flex-column-nowrap">
-
-      <i class='bx bx-x-circle close-vertical-btn'></i>
-
+      <i class='bx bxs-x-circle close-vertical-btn'></i>
       <div class="nav-search-container">
         <label for="nav-search-bar" class="nav-search-label">
           <input type="text" id="nav-search-bar" class="nav-search-bar" placeholder="Search" />           
           <i class="bx bx-search-alt-2 nav-search-icon"></i>
         </label>
-    </div>
+      </div>
       <a href="./public/pages/product/product.html">
         Products <i class='bx bxs-t-shirt' ></i> 
       </a>
@@ -73,7 +74,7 @@
       <a href="./public/pages/profile/profile.html">
         Profile <i class="bx bxs-user-circle "avatar avatar-circular"></i> 
       </a>
-      <a href="./public/pages/cart/cart.html">
+      <a href="./public/pages/login/login.html">
         Login <i class='bx bxs-log-in' ></i> 
       </a>
     </div>
