--- a/public/pages/wishlist/wishlist.html
+++ b/public/pages/wishlist/wishlist.html
@@ -25,7 +25,7 @@
     <header class="navbar" id="navbar">
       <nav class="nav-container-inline">
           <div class="nav-logo-container">
-              <a href="./index.html" class="nav-logo">Pehnawa</a>
+              <a href="../../../index.html" class="nav-logo">Pehnawa</a>
             </div>
             <div class="nav-search-container nav-search-main">
                 <label for="nav-search-bar" class="nav-search-label">
