style: added favicon, made sidebar toggleable

--- a/public/pages/product/product.html
+++ b/public/pages/product/product.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pehnawa | Product</title>
+    <link rel="shortcut icon" href="../../images/favicon (2).png" type="image/x-icon">
 
     <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
     <link
@@ -82,6 +83,9 @@
 
     <section class="outer-container">
       <div class="product-container">
+        <div class="filter-icon-wrapper">
+          <i class='bx bx-filter-alt filter-icon'></i>
+        </div>
       <!-- --------------left sidebar---------------->
       <aside class="filter-sidebar flex-column-nowrap">
         <div class="filters-wrapper flex-row-nowrap">
