--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pehnawa | Home</title>
+    <link rel="shortcut icon" href="./public/images/favicon (2).png" type="image/x-icon">
 
     <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
     <link
