--- a/public/pages/wishlist/wishlist.html
+++ b/public/pages/wishlist/wishlist.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pehnawa | Wishlist</title>
+    <link rel="shortcut icon" href="../../images/favicon (2).png" type="image/x-icon">
+
 
     <!-- =====================MAIN CSS FILE for EACH COMPONENTS================ -->
     <link
